--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
         header {
             background: #5e2d79;
             color: #ffffff;
-            padding: 20px;
             text-align: center;
+            padding: 40px 20px;
         }
         header img {
-            height: 60px;
+            height: 80px;
         }
         header h1 {
             font-family: 'Poppins', sans-serif;
-            margin: 10px 0 0;
+            font-size: 28px;
+            margin: 20px 0 10px;
         }
         header p {
             font-family: 'Roboto', sans-serif;
+            font-size: 16px;
             margin: 0;
         }
 
@@ -51,8 +53,9 @@
             background: #ffffff;
             padding: 20px;
             max-width: 500px;
-            margin: 20px auto;
+            margin: 40px auto;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: left;
         }
         .contact-form label {
             display: block;
@@ -76,6 +79,9 @@
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
+            display: block;
+            width: 100%;
+            text-align: center;
         }
         .contact-form button:hover {
             background: #4d2465;
@@ -97,22 +103,9 @@
 <body>
     <header>
         <img src="Kernel Commerce Logo (2).png" alt="Kernel Commerce Logo">
-        <h1>Kernel Commerce</h1>
-        <p>The Core for Online Brands</p>
+        <h1>The Core for Online Brands</h1>
+        <p>Empowering e-commerce businesses with innovative solutions and exceptional experiences</p>
     </header>
-
-    <section id="about">
-        <h2>Who We Are</h2>
-        <p>
-            Kernel Commerce is the foundation for a diverse portfolio of innovative e-commerce brands. We specialize in developing 
-            and managing online stores across various niches, leveraging cutting-edge technology and data-driven strategies to 
-            deliver exceptional customer experiences.
-        </p>
-        <p>
-            With a focus on adaptability, creativity, and growth, Kernel Commerce is dedicated to empowering modern e-commerce 
-            businesses. We believe in building brands that stand out, connect with customers, and thrive in an ever-changing digital world.
-        </p>
-    </section>
 
     <section id="contact">
         <h2>Get in Touch with Kernel Commerce</h2>
