--- a/index.html
+++ b/index.html
@@ -43,19 +43,15 @@
             font-family: 'Poppins', sans-serif;
             color: #1a1a1a;
         }
-        section p {
-            max-width: 800px;
-            margin: 10px auto;
-            line-height: 1.6;
-        }
 
         .contact-form {
             background: #ffffff;
-            padding: 20px;
+            padding: 30px;
             max-width: 500px;
-            margin: 40px auto;
+            margin: 0 auto;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             text-align: left;
+            border-radius: 8px;
         }
         .contact-form label {
             display: block;
@@ -74,14 +70,12 @@
         .contact-form button {
             background: #5e2d79;
             color: #ffffff;
-            padding: 10px 20px;
+            padding: 12px 20px;
             border: none;
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
-            display: block;
             width: 100%;
-            text-align: center;
         }
         .contact-form button:hover {
             background: #4d2465;
@@ -112,16 +106,16 @@
         <div class="contact-form">
             <form action="https://formspree.io/f/xwpvewve" method="POST">
                 <label for="name">Your Name</label>
-                <input type="text" id="name" name="name" placeholder="Your Name" required>
+                <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
                 <label for="email">Your Email</label>
-                <input type="email" id="email" name="email" placeholder="Your Email" required>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
                 <label for="subject">Subject</label>
-                <input type="text" id="subject" name="subject" placeholder="Subject" required>
+                <input type="text" id="subject" name="subject" placeholder="Enter the subject" required>
 
                 <label for="message">Your Message</label>
-                <textarea id="message" name="message" rows="4" placeholder="Your Message" required></textarea>
+                <textarea id="message" name="message" rows="4" placeholder="Enter your message" required></textarea>
 
                 <button type="submit">Submit</button>
             </form>
