--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             font-family: 'Poppins', sans-serif;
             color: #1a1a1a;
         }
+        section p {
+            max-width: 800px;
+            margin: 10px auto;
+            line-height: 1.6;
+        }
 
         .contact-form {
             background: #ffffff;
@@ -100,6 +105,20 @@
         <h1>The Core for Online Brands</h1>
         <p>Empowering e-commerce businesses with innovative solutions and exceptional experiences</p>
     </header>
+
+    <section id="who-we-are">
+        <h2>Who We Are</h2>
+        <p>
+            Kernel Commerce is the foundation for a diverse portfolio of innovative e-commerce brands. 
+            We specialize in developing and managing online stores across various niches, leveraging 
+            cutting-edge technology and data-driven strategies to deliver exceptional customer experiences.
+        </p>
+        <p>
+            With a focus on adaptability, creativity, and growth, Kernel Commerce is dedicated to empowering 
+            modern e-commerce businesses. We believe in building brands that stand out, connect with customers, 
+            and thrive in an ever-changing digital world.
+        </p>
+    </section>
 
     <section id="contact">
         <h2>Get in Touch with Kernel Commerce</h2>
