--- a/index.html
+++ b/index.html
@@ -15,54 +15,102 @@
             background-color: #f5f5f5;
             color: #333333;
         }
+
+        /* Header Section with Gradient Background */
         header {
-            background: #5e2d79;
+            background: linear-gradient(45deg, #5e2d79, #fad02c);
             color: #ffffff;
             text-align: center;
-            padding: 40px 20px;
+            padding: 60px 20px;
+            min-height: 300px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
+
         header img {
             height: 80px;
+            margin-bottom: 20px;
         }
+
         header h1 {
             font-family: 'Poppins', sans-serif;
-            font-size: 28px;
-            margin: 20px 0 10px;
+            font-size: 36px;
+            font-weight: bold;
+            margin-bottom: 10px;
         }
+
         header p {
             font-family: 'Roboto', sans-serif;
             font-size: 16px;
             margin: 0;
         }
 
+        /* Section Styling */
         section {
             padding: 40px 20px;
             text-align: center;
         }
+
         section h2 {
             font-family: 'Poppins', sans-serif;
             color: #1a1a1a;
+            margin-bottom: 10px;
         }
+
         section p {
             max-width: 800px;
             margin: 10px auto;
             line-height: 1.6;
+            text-align: center;
+        }
+
+        /* Who We Are Section */
+        #who-we-are {
+            background-color: #ffffff;
+            padding: 40px 20px;
+        }
+
+        #who-we-are p {
+            color: #666666;
+        }
+
+        /* Contact Form Section */
+        #contact {
+            padding: 40px 20px;
+            text-align: center;
+            background-color: #f5f5f5;
+        }
+
+        #contact h2 {
+            font-family: 'Poppins', sans-serif;
+            color: #1a1a1a;
+            margin-bottom: 10px;
+        }
+
+        #contact p {
+            font-size: 16px;
+            color: #666666;
+            margin-bottom: 30px;
         }
 
         .contact-form {
             background: #ffffff;
             padding: 30px;
             max-width: 500px;
-            margin: 0 auto;
+            margin: 0 auto 40px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             text-align: left;
             border-radius: 8px;
         }
+
         .contact-form label {
-            display: block;
-            margin: 10px 0 5px;
             font-weight: bold;
+            margin: 10px 0 5px;
+            display: block;
         }
+
         .contact-form input,
         .contact-form textarea {
             width: 100%;
@@ -72,6 +120,7 @@
             border-radius: 5px;
             font-size: 16px;
         }
+
         .contact-form button {
             background: #5e2d79;
             color: #ffffff;
@@ -81,11 +130,26 @@
             font-size: 16px;
             cursor: pointer;
             width: 100%;
+            text-transform: uppercase;
         }
+
         .contact-form button:hover {
             background: #4d2465;
         }
 
+        .company-info {
+            text-align: center;
+            font-size: 16px;
+            color: #333333;
+        }
+
+        .company-info h3 {
+            font-family: 'Poppins', sans-serif;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        /* Footer Section */
         footer {
             background: #333333;
             color: #ffffff;
@@ -93,6 +157,7 @@
             padding: 20px;
             font-size: 14px;
         }
+
         footer a {
             color: #005eff;
             text-decoration: none;
@@ -122,22 +187,29 @@
 
     <section id="contact">
         <h2>Get in Touch with Kernel Commerce</h2>
+        <p>Have questions or want to collaborate? We're here to help.</p>
         <div class="contact-form">
             <form action="https://formspree.io/f/xwpvewve" method="POST">
                 <label for="name">Your Name</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                <input type="text" id="name" name="name" placeholder="Your Name" required>
 
                 <label for="email">Your Email</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
 
                 <label for="subject">Subject</label>
-                <input type="text" id="subject" name="subject" placeholder="Enter the subject" required>
+                <input type="text" id="subject" name="subject" placeholder="Subject" required>
 
                 <label for="message">Your Message</label>
-                <textarea id="message" name="message" rows="4" placeholder="Enter your message" required></textarea>
+                <textarea id="message" name="message" rows="4" placeholder="Your Message" required></textarea>
 
-                <button type="submit">Submit</button>
+                <button type="submit">Send Message</button>
             </form>
+        </div>
+        <div class="company-info">
+            <h3>Company Information</h3>
+            <p>UAB Kernel Commerce</p>
+            <p>Vilnius, J. Savickio g. 4-7</p>
+            <p>LT-01108</p>
         </div>
     </section>
 
