--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <header>
         <img src="Kernel Commerce Logo (2).png" alt="Kernel Commerce Logo">
         <h1>The Core for Online Brands</h1>
-        <p>Empowering e-commerce businesses with innovative solutions and exceptional experiences</p>
+        <p>Specializing in the creation and growth of innovative e-commerce brands</p>
     </header>
 
     <section id="who-we-are">
